--- a/molecule/ppg/common/tasks/install_ppg13_tools.yml
+++ b/molecule/ppg/common/tasks/install_ppg13_tools.yml
@@ -169,7 +169,7 @@
     lineinfile:
       path: /var/lib/pgsql/13/data/postgresql.conf
       line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
-#    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat"
 
 # Comment it enabled lines before with pg_stat
 #  - name: Add extensions to postgresql.conf for Debian
