Rename pgbackrest pkg

--- a/molecule/ppg/common/tasks/install_ppg11_tools.yml
+++ b/molecule/ppg/common/tasks/install_ppg11_tools.yml
@@ -46,7 +46,7 @@
       state: latest
     vars:
       packages:
-        - percona-pgbackrest
+        - pgbackrest
         - percona-pgbackrest-doc
         - percona-pgbackrest-dbgsym
     when: ansible_os_family == "Debian"
