--- a/molecule/ppg/common/tasks/install_ppg11_tools.yml
+++ b/molecule/ppg/common/tasks/install_ppg11_tools.yml
@@ -128,7 +128,7 @@
     vars:
       packages:
         - percona-postgresql-11-repack
-        - percona-postgresql-11-repack-dbgsym
+#        - percona-postgresql-11-repack-dbgsym
     when: ansible_os_family == "Debian"
 
   - name: Install pgrepack RHEL
