--- a/molecule/ppg/pg-11-setup/playbooks/cleanup.yml
+++ b/molecule/ppg/pg-11-setup/playbooks/cleanup.yml
@@ -104,7 +104,7 @@
       vars:
         packages:
           - percona-postgresql-11-repack
-          - percona-postgresql-11-repack-dbgsym
+#          - percona-postgresql-11-repack-dbgsym
       when: ansible_os_family == "Debian"
 
     - name: remove pg_repack rpm packages
