--- a/molecule/ppg/common/tasks/install_ppg11_tools.yml
+++ b/molecule/ppg/common/tasks/install_ppg11_tools.yml
@@ -47,6 +47,7 @@
       packages:
         - percona-pgbackrest
         - percona-pgbackrest-doc
+        - percona-pgbackrest-dbgsym
     when: ansible_os_family == "Debian"
 
   - name: Install pgbackrest RHEL
