--- a/molecule/ppg/common/tasks/install_ppg11_tools.yml
+++ b/molecule/ppg/common/tasks/install_ppg11_tools.yml
@@ -14,16 +14,38 @@
       state: latest
     when: ansible_os_family == "RedHat"
 
-  - name: Enable pgaudit for Debian
-    lineinfile:
-      path: /etc/postgresql/11/main/postgresql.conf
-      line: shared_preload_libraries = 'pgaudit'
+  - name: Install pg-stat-monitor RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pg-stat-monitor11
+        - percona-pg-stat-monitor11-debuginfo
+    when: ansible_os_family == "RedHat"
+
+  - name: Install pg-stat-monitor debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pg-stat-monitor11
+        - percona-pg-stat-monitor11-dbgsym
     when: ansible_os_family == "Debian"
 
-  - name: Enable pgaudit for RHEL
+  - name: Add extensions to postgresql.conf for Debian
     lineinfile:
-      path: /var/lib/pgsql/11/data/postgresql.conf
-      line: shared_preload_libraries = 'pgaudit'
+      path: /etc/postgresql/12/main/postgresql.conf
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
+    when: ansible_os_family == "Debian"
+
+  - name: Add extensions to postgresql.conf for RHEL
+    lineinfile:
+      path: /var/lib/pgsql/12/data/postgresql.conf
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
     when: ansible_os_family == "RedHat"
 
   - name: Restart Postgres RHEL
