--- a/molecule/tasks/install_ppg13.yml
+++ b/molecule/tasks/install_ppg13.yml
@@ -107,6 +107,7 @@
         - percona-postgresql13-libs-debuginfo
         - percona-postgresql13-plperl-debuginfo
         - percona-postgresql13-pltcl-debuginfo
+        - percona-postgresql13-plpython3-debuginfo
         - percona-postgresql13-server-debuginfo
         - percona-postgresql13-test-debuginfo
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
