--- a/molecule/ppg/pg-11/tasks/main.yml
+++ b/molecule/ppg/pg-11/tasks/main.yml
@@ -2,7 +2,7 @@
 # Tasks for install PPG 11 packages
 
 - name: Configure repository
-  include_tasks: ../../common/tasks/enable_repo.yml
+  include_tasks: ../../../../tasks//enable_repo.yml
 
 - name: install Percona Platform for PostgreSQL 11 packages
   include_tasks: ../../../../tasks/install_ppg11.yml
@@ -21,7 +21,7 @@
   when: ansible_os_family == "RedHat"
 
 - name: Install PPG tools
-  include_tasks: ../../common/tasks/install_ppg11_tools.yml
+  include_tasks: ../../../../tasks/install_ppg11_tools.yml
 
 - name: Install GCC Deb
   apt:
@@ -38,5 +38,5 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../common/files/lib_version.c
+    src: ../../../../files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
