--- a/molecule/ppg/pg-12-major-upgrade/tasks/main.yml
+++ b/molecule/ppg/pg-12-major-upgrade/tasks/main.yml
@@ -20,7 +20,7 @@
   when: ansible_os_family == "RedHat"
 
 - name: Install PPG tools
-  include_tasks: ../../common/tasks/install_ppg11_tools.yml
+  include_tasks: ../../../../tasks/install_ppg11_tools.yml
 
 - name: Start Postgres RHEL
   service:
@@ -250,5 +250,5 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../common/files/lib_version.c
+    src: ../../../../files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
