--- a/molecule/ppg/pg-12-minor-upgrade/tasks/main.yml
+++ b/molecule/ppg/pg-12-minor-upgrade/tasks/main.yml
@@ -20,7 +20,7 @@
   when: ansible_os_family == "RedHat"
 
 - name: Install PPG tools
-  include_tasks: ../../common/tasks/install_ppg12_tools.yml
+  include_tasks: ../../../../tasks/install_ppg12_tools.yml
 
 - name: Start Postgres RHEL
   service:
@@ -83,7 +83,7 @@
   when: ansible_os_family == "RedHat"
 
 - name: Install PPG tools
-  include_tasks: ../../common/tasks/install_ppg12_tools.yml
+  include_tasks: ../../../../tasks/install_ppg12_tools.yml
 
 - name: Upgrade debian development packages
   apt:
@@ -122,5 +122,5 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../common/files/lib_version.c
+    src: ../../../../files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
