--- a/molecule/ppg/pg-12-full-major-upgrade/tasks/main.yml
+++ b/molecule/ppg/pg-12-full-major-upgrade/tasks/main.yml
@@ -33,7 +33,7 @@
   when: ansible_os_family == "Debian"
 
 - name: Install PPG tools
-  include_tasks: ../../common/tasks/install_ppg11_tools.yml
+  include_tasks: ../../../../tasks/install_ppg11_tools.yml
 
 - name: Install GCC Deb
   apt:
@@ -50,5 +50,5 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../common/files/lib_version.c
+    src: ../../../../files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
