--- a/molecule/ppg/pg-13-components-with-vanila/tasks/main.yml
+++ b/molecule/ppg/pg-13-components-with-vanila/tasks/main.yml
@@ -15,11 +15,11 @@
 ### temp part until percona-release is updated for PPG project
 
 - name: Install vanila postgresql
-  include_tasks: ../../common/tasks/install_pg13.yml
+  include_tasks: ../../../../tasks/install_pg13.yml
 
 
 - name: Configure repository
-  include_tasks: ../../common/tasks/enable_repo.yml
+  include_tasks: ../../../../tasks/enable_repo.yml
 
 - name: Initialize Postgres RHEL
   command: /usr/pgsql-13/bin/postgresql-13-setup initdb
@@ -35,4 +35,4 @@
   when: ansible_os_family == "RedHat"
 
 - name: Install ppg12 tools
-  include_tasks: ../../common/tasks/install_ppg13_tools.yml
+  include_tasks: ../../../../tasks/install_ppg13_tools.yml
