--- a/molecule/ppg/pg-13-with-vanila-components/tasks/main.yml
+++ b/molecule/ppg/pg-13-with-vanila-components/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure repository
-  include_tasks: ../../common/tasks/enable_repo.yml
+  include_tasks: ../../../../tasks/enable_repo.yml
 
 
 - name: install Percona Platform for PostgreSQL deb packages
