Fix path to libc file

--- a/molecule/ppg/pg-12-full-major-upgrade/playbooks/side_effect.yml
+++ b/molecule/ppg/pg-12-full-major-upgrade/playbooks/side_effect.yml
@@ -189,7 +189,7 @@
 
     - name: Copy libpq source file
       copy:
-        src: ../../../../files/lib_version.c
+        src: ../../common/files/lib_version.c
         dest: /tmp/libpq12_command_temp_dir
 
     - name: Delete percona-pgaudit for PPG11 on RHEL
