--- a/molecule/ppg/pg-12-major-upgrade/tasks/main.yml
+++ b/molecule/ppg/pg-12-major-upgrade/tasks/main.yml
@@ -250,5 +250,5 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../../../files/lib_version.c
+    src: ../../common/files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
