--- a/molecule/ppg/pg-13/tasks/main.yml
+++ b/molecule/ppg/pg-13/tasks/main.yml
@@ -37,7 +37,7 @@
 
 - name: Copy libpq source file
   copy:
-    src: ../../../../files/lib_version.c
+    src: ../../common/files/lib_version.c
     dest: /tmp/libpq_command_temp_dir
 
 - name: Delete dpkg-query for RHEL
