--- a/molecule/tasks/install_ppg11.yml
+++ b/molecule/tasks/install_ppg11.yml
@@ -72,6 +72,7 @@
       - percona-postgresql11-llvmjit
       - percona-postgresql11-plperl
       - percona-postgresql11-plpython
+      - percona-postgresql11-plpython3
       - percona-postgresql11-pltcl
       - percona-postgresql11-server
       - percona-postgresql11-test
@@ -101,6 +102,7 @@
         - percona-postgresql11-llvmjit
         - percona-postgresql11-plperl
         - percona-postgresql11-plpython
+        - percona-postgresql11-plpython3
         - percona-postgresql11-pltcl
         - percona-postgresql11-server
         - percona-postgresql11-test
