Add symlink to pg_repack

--- a/molecule/pg_repack/ppg-13/tasks/main.yml
+++ b/molecule/pg_repack/ppg-13/tasks/main.yml
@@ -96,11 +96,13 @@
     params:
       USE_PGXS: 1
 
-- name: Restart Postgres RHEL
-  service:
-    name: postgresql-13
-    state: restarted
-  register: out
+- name: Create a symbolic link
+  ansible.builtin.file:
+    src: /usr/pgsql-13/bin/pg_repack
+    dest: /usr/bin/pg_repack
+#    owner: foo
+#    group: foo
+    state: link
 
 - name: Start Postgres RHEL
   service:
