--- a/molecule/wal2json/ppg-13/molecule/default/molecule.yml
+++ b/molecule/wal2json/ppg-13/molecule/default/molecule.yml
@@ -4,7 +4,7 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: pgaudit-centos7-${BUILD_NUMBER}
+  - name: wal2json-centos7-${BUILD_NUMBER}
     region: eu-central-1
     image: ami-095e1a4d3d632d215
     vpc_subnet_id: subnet-085deaca8c1c59a4f
@@ -24,7 +24,7 @@ provisioner:
     verify: ../../playbooks/verify.yml
 verifier:
 #  name: ansible
-#  name: testinfra
+  name: testinfra
   directory: ../../tests/
   options:
     verbose: true
