--- a/molecule/wal2json/ppg-13/tasks/main.yml
+++ b/molecule/wal2json/ppg-13/tasks/main.yml
@@ -78,7 +78,7 @@
 
 - debug: var=gcc.stdout_lines
 
-- name: Clone pg_stat_monitor sources
+- name: Clone wal2json sources
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
