--- a/molecule/wal2json/ppg-12/molecule/default/molecule.yml
+++ b/molecule/wal2json/ppg-12/molecule/default/molecule.yml
@@ -21,9 +21,13 @@ provisioner:
     destroy: ../../../../playbooks/destroy.yml
     prepare: ../../../../playbooks/prepare.yml
     converge: ../../playbooks/playbook.yml
-    verify: ../../playbooks/verify.yml
 verifier:
-  name: ansible
+  name: testinfra
+  directory: ../../../tests/
+  options:
+    verbose: true
+    s: true
+    junitxml: report.xml
 scenario:
   destroy_sequence:
     - destroy
