--- a/ppg/pg-11-with-vanila-components/tasks/main.yml
+++ b/ppg/pg-11-with-vanila-components/tasks/main.yml
@@ -67,7 +67,7 @@
     state: restarted
   when: ansible_os_family == "RedHat"
 
-- name: Retart Postgres Debian
+- name: Restart Postgres Debian
   command: sudo systemctl restart postgresql
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
