--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -55,7 +55,7 @@
       state: restarted
     when: ansible_os_family == "RedHat"
 
-  - name: Retart Postgres Debian
+  - name: Restart Postgres Debian
     command: sudo systemctl restart postgresql
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
@@ -138,7 +138,7 @@
       state: restarted
     when: ansible_os_family == "RedHat"
 
-  - name: Retart Postgres Debian
+  - name: Retsart Postgres Debian
     command: sudo systemctl restart postgresql
     environment:
       PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
