--- a/pgbouncer/ppg-13/tasks/main.yml
+++ b/pgbouncer/ppg-13/tasks/main.yml
@@ -49,6 +49,7 @@
     - gcc-c++
     - libevent-devel
     - pandoc
+    - libtoolize
 
 - name: Enable gcc 7
   shell: scl enable devtoolset-7 bash
