--- a/pgbouncer/ppg-13/tasks/main.yml
+++ b/pgbouncer/ppg-13/tasks/main.yml
@@ -93,13 +93,13 @@
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-- name: Autogen pgbouncer
-  shell: ./autogen.sh
-  args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
+#- name: Autogen pgbouncer
+#  shell: ./autogen.sh
+#  args:
+#    chdir: /tmp/pgbouncer
+#  become_user: postgres
 
-- name: Autogen pgbouncer
+- name: Configure pgbouncer
   shell: ./configure --prefix=/usr/local
   args:
     chdir: /tmp/pgbouncer
