--- a/pgbouncer/ppg-13/tasks/main.yml
+++ b/pgbouncer/ppg-13/tasks/main.yml
@@ -93,11 +93,11 @@
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-#- name: Autogen pgbouncer
-#  shell: ./autogen.sh
-#  args:
-#    chdir: /tmp/pgbouncer
-#  become_user: postgres
+- name: Autogen pgbouncer
+  shell: ./autogen.sh
+  args:
+    chdir: /tmp/pgbouncer
+  become_user: postgres
 
 - name: Configure pgbouncer
   shell: ./configure --prefix=/usr/local
