--- a/pgbadger/ppg-13/tasks/main.yml
+++ b/pgbadger/ppg-13/tasks/main.yml
@@ -30,16 +30,16 @@
     - percona-postgresql-client-common
     - percona-postgresql-common
     - percona-postgresql-server-dev-all
-    - percona-postgresql11
-    - percona-postgresql11-contrib
-    - percona-postgresql11-devel
-    - percona-postgresql11-libs
-    - percona-postgresql11-llvmjit
-    - percona-postgresql11-plperl
-    - percona-postgresql11-plpython3
-    - percona-postgresql11-pltcl
-    - percona-postgresql11-server
-    - percona-postgresql11-test
+    - percona-postgresql13
+    - percona-postgresql13-contrib
+    - percona-postgresql13-devel
+    - percona-postgresql13-libs
+    - percona-postgresql13-llvmjit
+    - percona-postgresql13-plperl
+    - percona-postgresql13-plpython3
+    - percona-postgresql13-pltcl
+    - percona-postgresql13-server
+    - percona-postgresql13-test
     - openssl-devel
     - llvm-toolset-7-clang
     - llvm5.0
@@ -47,17 +47,23 @@
     - readline-devel
     - gcc
     - gcc-c++
-    - git
-    - pandoc
-    - libtool
+    - libevent-devel
+    - perl-Pod-Checker
+    - perl-devel
+    - perl-JSON-XS.x86_64
 
 - name: Enable gcc 7
   shell: scl enable devtoolset-7 bash
 
 - name: Initialize Postgres RHEL
-  command: /usr/pgsql-11/bin/postgresql-11-setup initdb
+  command: /usr/pgsql-13/bin/postgresql-13-setup initdb
   environment:
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+
+- shell: gcc --version
+  register: gcc
+
+- debug: var=gcc.stdout_lines
 
 - name: Enable gcc 7
   shell: echo "source /opt/rh/devtoolset-7/enable" | sudo tee -a /etc/profile;
@@ -76,47 +82,32 @@
 
 - debug: var=gcc.stdout_lines
 
-- name: Clone pgbouncer sources
+- name: Clone pgbadger sources
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
-    dest: /tmp/pgbouncer
-    recursive: yes
-    update: yes
+    dest: /tmp/pgbadger
   vars:
     repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-- name: Autogen pgbouncer
-  shell: ./autogen.sh
+- name: Make perl for pgbadger
+  shell: perl Makefile.PL
   args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
+    chdir: /tmp/pgbadger
 
-- name: Configure pgbouncer
-  shell: ./configure --prefix=/usr/local
-  args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
-
-- name: Build pgbouncer from sources
+- name: Build pgbadger from sources
   make:
-    chdir: "/tmp/pgbouncer"
+    chdir: "/tmp/pgbadger"
 
-- name: Install pgbouncer from sources
+- name: Install pgbadger from sources
   make:
     target: install
-    chdir: "/tmp/pgbouncer"
+    chdir: "/tmp/pgbadger"
 
 - name: Restart Postgres RHEL
   service:
-    name: postgresql-11
+    name: postgresql-13
     state: restarted
   register: out
-
-- name: Start Postgres RHEL
-  service:
-    name: postgresql-11
-    state: started
-    enabled: yes
