--- a/pgbadger/ppg-11/tasks/main.yml
+++ b/pgbadger/ppg-11/tasks/main.yml
@@ -48,8 +48,9 @@
     - gcc
     - gcc-c++
     - git
-    - pandoc
-    - libtool
+    - perl-Pod-Checker
+    - perl-devel
+    - perl-JSON-XS.x86_64
 
 - name: Enable gcc 7
   shell: scl enable devtoolset-7 bash
@@ -76,47 +77,32 @@
 
 - debug: var=gcc.stdout_lines
 
-- name: Clone pgbouncer sources
+- name: Clone pgbadger sources
   git:
     repo: "{{ repo }}"
     version: "{{ version }}"
-    dest: /tmp/pgbouncer
-    recursive: yes
-    update: yes
+    dest: /tmp/pgbadger
   vars:
     repo: "{{ lookup('env', 'COMPONENT_REPO') }}"
     version: "{{ lookup('env', 'COMPONENT_VERSION') }}"
   become_user: postgres
 
-- name: Autogen pgbouncer
-  shell: ./autogen.sh
+- name: Make perl for pgbadger
+  shell: perl Makefile.PL
   args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
+    chdir: /tmp/pgbadger
 
-- name: Configure pgbouncer
-  shell: ./configure --prefix=/usr/local
-  args:
-    chdir: /tmp/pgbouncer
-  become_user: postgres
-
-- name: Build pgbouncer from sources
+- name: Build pgbadger from sources
   make:
-    chdir: "/tmp/pgbouncer"
+    chdir: "/tmp/pgbadger"
 
-- name: Install pgbouncer from sources
+- name: Install pgbadger from sources
   make:
     target: install
-    chdir: "/tmp/pgbouncer"
+    chdir: "/tmp/pgbadger"
 
 - name: Restart Postgres RHEL
   service:
     name: postgresql-11
     state: restarted
   register: out
-
-- name: Start Postgres RHEL
-  service:
-    name: postgresql-11
-    state: started
-    enabled: yes
