--- a/tasks/install_ppg11_tools.yml
+++ b/tasks/install_ppg11_tools.yml
@@ -175,3 +175,25 @@
 
   - debug: msg="{{pg_status.stdout}}"
     when: ansible_os_family == "Debian"
+
+
+  - name: Clone pgaudit sources
+    git:
+      repo: https://github.com/pgaudit/pgaudit.git
+      version: REL_13_STABLE
+      dest: /tmp/pg_audit
+    become_user: postgres
+
+  - name: Clone pg_repack sources
+    git:
+      repo: https://github.com/reorg/pg_repack.git
+      version: master
+      dest: /tmp/pg_repack
+    become_user: postgres
+
+  - name: Clone pg_stat_monitor sources
+    git:
+      repo: https://github.com/percona/pg_stat_monitor.git
+      version: master
+      dest: /tmp/pg_stat_monitor
+    become_user: postgres
