--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -49,6 +49,7 @@
           - gnupg2
           - rsync
           - acl
+          - git
       retries: 60
       delay: 10
       register: result
@@ -76,6 +77,7 @@
           - unzip
           - wget
           - rsync
+          - git-all
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
 
     - name: install needed packages for running tests with yum on RHEL8
@@ -86,4 +88,5 @@
         packages:
         - unzip
         - wget
+        - git-all
       when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int == 8
