--- a/ppg/pg-13/molecule/debian-10/molecule.yml
+++ b/ppg/pg-13/molecule/debian-10/molecule.yml
@@ -8,7 +8,7 @@ platforms:
     region: eu-central-1
     image: ami-0be88f8d647409e61
     vpc_subnet_id: subnet-085deaca8c1c59a4f
-    instance_type: t2.micro
+    instance_type: t2.small
     ssh_user: admin
     root_device_name: xvda
     instance_tags:
