--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -88,31 +88,6 @@
         wal_level = replica
     when: ansible_os_family == "RedHat"
 
-  - name: Edit pg_hba.conf RHEL
-    blockinfile:
-      path: /var/lib/pgsql/13/data/pg_hba.conf
-      backup: true
-      block: |
-        local   all             all                                     trust
-        host    all             all             127.0.0.1/32            trust
-        host    all             all             ::1/128                 trust
-        local   replication     all                                     trust
-        host    replication     all             127.0.0.1/32            trust
-        host    replication     all             ::1/128                 trust
-    when: ansible_os_family == "RedHat"
-
-  - name: Edit pg_hba.conf Debian
-    blockinfile:
-      path: /etc/postgresql/13/main/pg_hba.conf
-      backup: true
-      block: |
-        local   all             all                                     trust
-        host    all             all             127.0.0.1/32            trust
-        host    all             all             ::1/128                 trust
-        local   replication     all                                     trust
-        host    replication     all             127.0.0.1/32            trust
-        host    replication     all             ::1/128                 trust
-    when: ansible_os_family == "Debian"
 
   - name: Restart Postgres RHEL
     service:
@@ -217,6 +192,43 @@
       version: REL0_8_1
       dest: /tmp/pg_stat_monitor
     become_user: postgres
+
+  - name: Remove pg_hba.conf debian
+    file:
+      path: /var/lib/pgsql/13/data/pg_hba.conf
+      state: absent
+    when: ansible_os_family == "RedHat"
+
+
+  - name: Remove pg_hba.conf debian
+    file:
+      path: /etc/postgresql/13/main/pg_hba.conf
+      state: absent
+    when: ansible_os_family == "Debian"
+
+  - name: Edit pg_hba.conf RHEL
+    blockinfile:
+      path: /var/lib/pgsql/13/data/pg_hba.conf
+      block: |
+        local   all             all                                     trust
+        host    all             all             127.0.0.1/32            trust
+        host    all             all             ::1/128                 trust
+        local   replication     all                                     trust
+        host    replication     all             127.0.0.1/32            trust
+        host    replication     all             ::1/128                 trust
+    when: ansible_os_family == "RedHat"
+
+  - name: Edit pg_hba.conf Debian
+    blockinfile:
+      path: /etc/postgresql/13/main/pg_hba.conf
+      block: |
+        local   all             all                                     trust
+        host    all             all             127.0.0.1/32            trust
+        host    all             all             ::1/128                 trust
+        local   replication     all                                     trust
+        host    replication     all             127.0.0.1/32            trust
+        host    replication     all             ::1/128                 trust
+    when: ansible_os_family == "Debian"
 
   - name: Restart Postgres RHEL
     service:
