--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -210,6 +210,7 @@
     blockinfile:
       path: /var/lib/pgsql/13/data/pg_hba.conf
       create: yes
+      owner: postgres
       block: |
         local   all             all                                     trust
         host    all             all             127.0.0.1/32            trust
@@ -222,6 +223,7 @@
   - name: Edit pg_hba.conf Debian
     blockinfile:
       create: yes
+      owner: postgres
       path: /etc/postgresql/13/main/pg_hba.conf
       block: |
         local   all             all                                     trust
