--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -1,3 +1,22 @@
+  - name: Install additional packages RPM
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - openssl-devel
+      - llvm-toolset-7-clang
+      - llvm5.0
+      - llvm-toolset-7
+      - readline-devel
+      - gcc
+      - gcc-c++
+      - libevent-devel
+      - pandoc
+      - libtool
+    when: ansible_os_family == "RedHat"
+
   - name: Install pgaudit Debian
     apt:
       name: "{{ packages }}"
@@ -160,16 +179,81 @@
         - percona-pg-stat-monitor13-dbgsym
     when: ansible_os_family == "Debian"
 
+  - name: Install pgbadger RHEL
+    yum:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install pgbadger Debian
+    apt:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-pgaudit13_set_user RHEL
+    yum:
+      name: percona-pgaudit13_set_user
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgaudit13_set_user Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgaudit13-set-user
+        - percona-pgaudit13-set-user-dbgsym
+
+  - name: Install percona-pgbouncer RHEL
+    yum:
+      name: percona-pgbouncer
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgbouncer Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgbouncer
+        - percona-pgbouncer-dbgsym
+
+  - name: Install percona-wal2json13 RHEL
+    yum:
+      name: percona-wal2json13
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-wal2json13 Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-postgresql-13-wal2json
+        - percona-postgresql-13-wal2json-dbgsym
+
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
       path: /etc/postgresql/13/main/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "Debian"
 
   - name: Add extensions to postgresql.conf for RHEL
     lineinfile:
       path: /var/lib/pgsql/13/data/postgresql.conf
-      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit'
+      line: shared_preload_libraries = 'pg_stat_monitor, pgaudit, set_user'
     when: ansible_os_family == "RedHat"
 
   - name: Clone pgaudit sources
@@ -233,6 +317,41 @@
         host    replication     all             127.0.0.1/32            trust
         host    replication     all             ::1/128                 trust
     when: ansible_os_family == "Debian"
+
+  - name: Clone pgbadger sources
+    git:
+      repo: https://github.com/darold/pgbadger.git
+      version: v11.5
+      dest: /tmp/pgbadger
+    become_user: postgres
+
+  - name: Make perl for pgbadger
+    shell: perl Makefile.PL
+    args:
+      chdir: /tmp/pgbadger
+
+  - name: Clone set_user sources
+    git:
+      repo: https://github.com/pgaudit/set_user.git
+      version: REL2_0_0
+      dest: /tmp/set_user
+    become_user: postgres
+
+  - name: Clone pgbouncer sources
+    git:
+      repo: https://github.com/pgbouncer/pgbouncer.git
+      version: pgbouncer_1_15_0
+      dest: /tmp/pgbouncer
+      recursive: yes
+      update: yes
+    become_user: postgres
+
+  - name: Clone wal2json sources
+    git:
+      repo: https://github.com/eulerto/w
+      version: wal2json_2_3
+      dest: /tmp/wal2json
+    become_user: postgres
 
   - name: Restart Postgres RHEL
     service:
