Add ppg12 new packages and fix wal2json

--- a/tasks/install_ppg12_tools.yml
+++ b/tasks/install_ppg12_tools.yml
@@ -1,3 +1,22 @@
+  - name: Install additional packages RPM
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - openssl-devel
+        - llvm-toolset-7-clang
+        - llvm5.0
+        - llvm-toolset-7
+        - readline-devel
+        - gcc
+        - gcc-c++
+        - libevent-devel
+        - pandoc
+        - libtool
+    when: ansible_os_family == "RedHat"
+
   - name: Install pgaudit Debian
     apt:
       name: "{{ packages }}"
@@ -159,6 +178,72 @@
         - percona-pg-stat-monitor12-dbgsym
     when: ansible_os_family == "Debian"
 
+  - name: Install pgbadger RHEL
+    yum:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install pgbadger Debian
+    apt:
+      name: percona-pgbadger
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "Debian"
+
+  - name: Install percona-pgaudit12_set_user RHEL
+    yum:
+      name: percona-pgaudit12_set_user
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgaudit12_set_user Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgaudit12-set-user
+        - percona-pgaudit12-set-user-dbgsym
+
+  - name: Install percona-pgbouncer RHEL
+    yum:
+      name: percona-pgbouncer
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-pgbouncer Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-pgbouncer
+        - percona-pgbouncer-dbgsym
+
+  - name: Install percona-wal2json12 RHEL
+    yum:
+      name: percona-wal2json12
+      state: latest
+      update_cache: yes
+    when: ansible_os_family == "RedHat"
+
+  - name: Install percona-wal2json13 Debian
+    apt:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+        - percona-postgresql-12-wal2json
+        - percona-postgresql-12-wal2json-dbgsym
+
+
   - name: Add extensions to postgresql.conf for Debian
     lineinfile:
       path: /etc/postgresql/12/main/postgresql.conf
@@ -190,6 +275,41 @@
       repo: https://github.com/percona/pg_stat_monitor.git
       version: REL0_8_1
       dest: /tmp/pg_stat_monitor
+    become_user: postgres
+
+  - name: Clone pgbadger sources
+    git:
+      repo: https://github.com/darold/pgbadger.git
+      version: v11.5
+      dest: /tmp/pgbadger
+    become_user: postgres
+
+  - name: Make perl for pgbadger
+    shell: perl Makefile.PL
+    args:
+      chdir: /tmp/pgbadger
+
+  - name: Clone set_user sources
+    git:
+      repo: https://github.com/pgaudit/set_user.git
+      version: REL2_0_0
+      dest: /tmp/set_user
+    become_user: postgres
+
+  - name: Clone pgbouncer sources
+    git:
+      repo: https://github.com/pgbouncer/pgbouncer.git
+      version: pgbouncer_1_15_0
+      dest: /tmp/pgbouncer
+      recursive: yes
+      update: yes
+    become_user: postgres
+
+  - name: Clone wal2json sources
+    git:
+      repo: https://github.com/eulerto/wal2json.git
+      version: wal2json_2_3
+      dest: /tmp/wal2json
     become_user: postgres
 
   - name: Remove pg_hba.conf debian
