--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -1,3 +1,24 @@
+  - name: Setup additional yum packages
+    yum:
+      name: "{{ packages }}"
+      update_cache: yes
+      state: present
+    vars:
+      packages:
+        - yum-utils
+        - centos-release-scl
+    when: ansible_os_family == "RedHat"
+
+
+  - name: setup devtoolset-7-gcc
+    yum:
+      name: devtoolset-7-gcc*
+      update_cache: yes
+      enablerepo: centos-sclo-rh-testing
+      state: present
+    when: ansible_os_family == "RedHat"
+
+
   - name: Install additional packages RPM
     yum:
       name: "{{ packages }}"
