--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -7,7 +7,7 @@
       packages:
         - yum-utils
         - centos-release-scl
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
 
 
   - name: setup devtoolset-7-gcc
@@ -16,7 +16,7 @@
       update_cache: yes
       enablerepo: centos-sclo-rh-testing
       state: present
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int <= 7
 
 
   - name: Install additional packages RPM
