--- a/tasks/install_ppg13_tools.yml
+++ b/tasks/install_ppg13_tools.yml
@@ -339,6 +339,21 @@
         host    replication     all             ::1/128                 trust
     when: ansible_os_family == "Debian"
 
+#  - name: Set wal level
+#    lineinfile:
+#      path: /var/lib/pgsql/13/data/postgresql.conf
+#      line: wal_level = logical
+#
+#  - name: Set wal senders
+#    lineinfile:
+#      path: /var/lib/pgsql/13/data/postgresql.conf
+#      line: max_wal_senders = 10
+#
+#  - name: Set replication slots
+#    lineinfile:
+#      path: /var/lib/pgsql/13/data/postgresql.conf
+#      line: max_replication_slots = 10
+
   - name: Clone pgbadger sources
     git:
       repo: https://github.com/darold/pgbadger.git
